<resources>
    <string name="app_name">Activity Tracker</string>

    <string name="action_startTracking">Start</string>
    <string name="action_stopTracking">Stop</string>

    <string name="hint_time">Time</string>
    <string name="hint_pace">Pace (min/km)</string>
    <string name="hint_imperial_pace">Pace (min/mi)</string>
    <string name="hint_meanPace">Avg. Pace (min/km)</string>
    <string name="hint_imperial_meanPace">Avg. Pace (min/mi)</string>
    <string name="hint_activeTime">Active Time</string>
    <string name="hint_distance">Distance (m)</string>
    <string name="hint_imperial_distance">Distance (ft)</string>
    <string name="hint_units">Metric</string>

    <string name="default_clock">00:00:00</string>
    <string name="default_distance">0.00</string>
</resources>
